# riptide

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  cleanup-images.yaml  release.yaml
config/: service-catalog.json  team-keys.dev.json  team-keys.json
docs/: README.md  argocd-notification-template.yaml  onboarding-a-team.md  setup-argocd-notification.md  setup-bitbucket-webhook.md  setup-jenkins-notification.md  setup-noergler-notification.md  setup-tekton-pipeline.md
docs/jenkins/: DbRiptide.groovy
migrations/: env.py
migrations/versions/: 0001_init.py  0002_bitbucket_push_commit_stats.py  0002_index_service_created_at.py  0002_noergler_pr_rollup.py  0003_add_noergler_events.py
openshift/: README.md  kustomization.yaml
openshift/collector/: configmap-app.yaml  deployment.yaml  job-migrate.yaml  kustomization.yaml  riptide.json  route.yaml  service-catalog.json  service.yaml  team-keys.json
openshift/shared/: namespace.yaml  secret.env.example  team-keys.json.example
scripts/: bitbucket-onboarding.env.example  bitbucket-onboarding.example.json  bitbucket_onboarding.py  check_onboarding.py  onboard-repos.py  onboard_repo.py  onboard_repos.py  onboarding.env.example  onboarding.example.json
src/riptide_collector/: __init__.py  auth.py  bbs_client.py  catalog.py  config.py  db.py  logging_config.py  main.py  models.py  parsers.py  parsers_bitbucket.py  settings.py  team_keys.py
tests/: _keys.py  conftest.py  test_auth.py  test_bbs_client.py  test_catalog.py  test_config.py  test_health.py  test_log_schema.py  test_parsers.py  test_parsers_bitbucket.py  test_startup_validation.py  test_team_keys.py  test_webhooks.py  test_webhooks_bitbucket_enrichment.py  test_webhooks_bitbucket_hmac.py  test_webhooks_extra.py  test_webhooks_noergler.py
tests/fixtures/: argocd_synced.json  bitbucket_pr_comment_added.json  bitbucket_pr_declined.json  bitbucket_pr_merged.json  bitbucket_pr_modified_draft_to_ready.json  bitbucket_pr_modified_title_only.json  bitbucket_pr_reviewer_approved.json  (+10 more)
(+10 files in other folders)
