[project]
name = "riptide-collector"
version = "0.1.0"
description = "DevOps delivery-metrics ingestion service for the riptide suite"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "email-validator>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "coverage[toml]>=7.6",
    "testcontainers[postgres]>=4.9",
    "httpx>=0.28",
    "ruff>=0.8",
    "pyright>=1.1.391",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riptide_collector"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"migrations/**" = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
"tests/**" = ["B"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests", "migrations"]
exclude = ["**/__pycache__", "**/.venv"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportUnknownLambdaType = false

[[tool.pyright.executionEnvironments]]
root = "migrations"
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -ra"

[tool.coverage.run]
branch = true
source = ["src/riptide_collector"]
omit = [
    "src/riptide_collector/__main__.py",
    "migrations/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
